# movieapp

./: README.md
lab4/: CMakeLists.txt  main.cpp  movieappdiagram.mdj
lab4/Domain/: domain.cpp  domain.h  jsondomaintest.cpp  jsondomaintest.h  jsontest.json
lab4/GUI/: GUI.cpp  GUI.h
lab4/JSONsaves/: testmovielist.json  watchlist.json
lab4/Repository/: repository.cpp  repository.h  repotests.cpp  repotests.h
lab4/Services/: jsonservicestests.cpp  jsonservicestests.h  services.cpp  services.h  servicestests.cpp  servicestests.h
lab4/Services/CSVsaves/: movielist.csv  watchlist.csv
lab4/Services/HTMLsaves/: watchlist.html
lab4/Services/JSONsaves/: movielist.csv  testmovielist.json  testwatchlist.json  watchlist.json
lab4/UI/: ui.cpp  ui.h
